# TODO-list-FastAPI-ORM

./: .gitignore  CacheProcess.py  db.py  key.key  log.db  main.py  pyproject.toml  records.db  requirements.txt
static/: style.css
templates/: base.html  create_note.html  edit_todo.html  login.html  main.html  profile.html  register.html  todo_detail.html
